--- a/package.json
+++ b/package.json
@@ -29,15 +29,19 @@
   "homepage": "https://kitware.github.io/itk-vtk-viewer/",
   "main": "./dist/itkVtkViewer.js",
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.17.2",
+    "@babel/plugin-proposal-private-methods": "^7.16.11",
     "@kitware/vtk.js": "^19.0.2",
     "@thewtex/iconselect.js": "^2.1.2",
     "@xstate/inspect": "^0.4.1",
     "axios": "^0.21.1",
+    "babel-plugin-styled-components": "^2.0.6",
     "commander": "^2.20.3",
     "css-element-queries": "^1.2.3",
     "curry": "^1.2.0",
     "eventemitter3": "^4.0.7",
     "express": "^4.17.1",
+    "http-server": "^14.1.0",
     "itk": "^14.0.2",
     "itk-viewer-icons": "^11.11.2",
     "mobx": "^5.15.7",
@@ -63,7 +67,7 @@
     "buffer": "^6.0.3",
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^5.0.2",
-    "es-abstract": "1.18.0-next.1",
+    "es-abstract": "^1.18.0-next.1",
     "expose-loader": "^1.0.3",
     "husky": "^4.3.7",
     "imjoy-core": "^0.13.74",
@@ -98,8 +102,8 @@
     "tap-spec": "^5.0.0",
     "tape": "^5.2.0",
     "tape-catch": "^1.0.6",
-    "webpack": "^5.41.1",
-    "webpack-cli": "^4.7.2",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^3.11.2",
     "webpackbar": "^5.0.0-3",
     "workbox-build": "^6.1.5",
@@ -119,7 +123,7 @@
     "bundle": "StandaloneHTML ./dist/index.html ./dist/ItkVtkViewer.html",
     "commit": "git cz",
     "format": "prettier --write src/UserInterface/**/*.js src/*.js",
-    "start": "webpack serve --mode development --content-base ./dist/ --watch-content-base --open --port 8082",
+    "start": "webpack serve --mode production --content-base ./dist/ --watch-content-base --open --port 8082",
     "semantic-release": "semantic-release",
     "test": "npm run build:test-ui && karma start ./karma.conf.js --browsers Chrome,Firefox",
     "test:headless": "./test/run.sh",
