--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,41 @@
 {
   presets: [
-    ['@babel/preset-env', {
+    ['@babel/preset-env',
+      {
       targets: {
-        browsers: ['last 2 versions'],
-      },
+        browsers: ['last 2 versions'
+          ],
+        },
       useBuiltIns: false,
-    }],
+      }
+    ],
     "mobx",
   ],
-  "plugins": ["@babel/plugin-transform-runtime"]
+  "plugins": [
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    "babel-plugin-styled-components",
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ],
+    [
+      "@babel/plugin-proposal-private-property-in-object",
+      {
+        "loose": true
+      }
+    ],
+    [
+      "@babel/plugin-proposal-private-methods",
+      {
+        "loose": true
+      }
+    ]
+  ]
 }
